--- a/styles/style.css
+++ b/styles/style.css
@@ -102,7 +102,7 @@ header ul li a:hover {
 
 .about span {
   position: absolute;
-  background-color: #ff0410;
+  background-color: ##ddbcd9;
   width: 70px;
   height: 70px;
   display: flex;
